feat(mongo) created auth mongo depl yaml file

--- a/k8s/auth-depl.yaml
+++ b/k8s/auth-depl.yaml
@@ -17,6 +17,11 @@ spec:
       containers:
         - name: tick-auth
           image: maciekkulinski/tick-auth:latest
+          env:
+            - name: PORT
+              value: "8080"
+            - name: MONGO_URI
+              value: mongodb://tick-auth-mongo-srv/tick-auth
 ---
 apiVersion: v1
 kind: Service
