--- a/k8s/auth-depl.yaml
+++ b/k8s/auth-depl.yaml
@@ -22,6 +22,11 @@ spec:
               value: "8080"
             - name: MONGO_URI
               value: mongodb://tick-auth-mongo-srv/tick-auth
+            - name: JWT_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: jwt-secret
+                  key: JWT_KEY
 ---
 apiVersion: v1
 kind: Service
